兼容IE浏览器处理，引入babel-polyfill和es6-promise

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -12,6 +12,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<title> <%= htmlWebpackPlugin.options.title %> </title>
 		<link rel="icon" type="image/x-icon" href="<%= BASE_URL %>logo.ico" />
 		<link rel="icon" sizes="16x16 24x24 32x32 64x64 128x128" type="image/x-icon" href="<%= BASE_URL %>logo.ico?v=2" />
+		<!--[if lt IE 9]>
+			<script src="../../plugins/ie/ieBetter.min.js" charset="UTF-8"></script>
+			<script src="../../plugins/ie/es5-shim.min.js" charset="UTF-8"></script>
+			<script src="../../plugins/ie/es5-sham.min.js" charset="UTF-8"></script>
+		<![endif]-->
 	</head>
 	<body>
 		<noscript>
