--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />		
 		<meta base="/">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,IE=IE9" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
